; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest_main.c_testReopen.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest_main.c_testReopen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @testReopen(i32** %0, i32* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32** %0, i32*** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %2
  %10 = load i32**, i32*** %3, align 8
  %11 = load i32*, i32** %10, align 8
  %12 = call i8* @tdb_library_name(i32* %11)
  store i8* %12, i8** %5, align 8
  %13 = load i32**, i32*** %3, align 8
  %14 = call i32 @testClose(i32** %13)
  %15 = load i8*, i8** %5, align 8
  %16 = load i32**, i32*** %3, align 8
  %17 = call i32 @tdb_open(i8* %15, i32 0, i32 0, i32** %16)
  %18 = load i32*, i32** %4, align 8
  store i32 %17, i32* %18, align 4
  br label %19

19:                                               ; preds = %9, %2
  ret void
}

declare dso_local i8* @tdb_library_name(i32*) #1

declare dso_local i32 @testClose(i32**) #1

declare dso_local i32 @tdb_open(i8*, i32, i32, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
